# OpenGL_Boiler

./: CMakeLists.txt  README.md  Square.h  Utils.h  main.cpp
src/: Position.h  Square.h  Utils.h  main.cpp
win32/GL/: glew.h
win32/GLFW/: glfw3.h  glfw3native.h
